added new texs and stuff

--- a/texs/thesis_abstract/thesis_abstract.tex
+++ b/texs/thesis_abstract/thesis_abstract.tex
@@ -48,14 +48,13 @@
 	\section*{Introduction and problem framing}
 	In recent years, \emph{machine learning} techniques have been massively adopted by scientific collaboration around the world. In particular, a paradigm known as \emph{deep learning}, which leverages multiple layers of \emph{artificial neurons} (theorized by \cite{Rosenblatt1958ThePA}) trained through the use of a \emph{loss function} and \emph{backpropagation}, has achieved a wide range of applications. Even a simple overview of the subject would be far beyond the scope of this section; we thus limit ourselves to the class of \emph{generative models}.
 	
-	In the physical sciences, the need for trustworthy and robust event generation is usually tackled by \emph{Monte Carlo methods}, with state of the art libraries (such as \cite{AGOSTINELLI2003250}) capable of achieving remarkable results at the cost of computational complexity and computing times. The generated data structure is usually tabular or sparse, but may vary greatly between different experiments and collaborations. On the other hand, research in the field of computer vision has fuelled development of remarkable deep learning models, focused mainly on image generation. \emph{Generative Adversarial Networks} (GANs) \cite{goodfellow2014generative}, \emph{Variational Autoencorders} (VAEs) \cite{kingma2014autoencoding} and \emph{Normalizing Flows} \cite{rezende2016variational} are some of the most successful frameworks developed thus far. However, such tools remain geared towards the necessities of industry; much work remains to be done to enable the use of this technologies in real, hard sciences applications.
+	In the physical sciences, the need for trustworthy and robust event generation is usually tackled by \emph{Monte Carlo methods}, with state of the art libraries (such as \cite{AGOSTINELLI2003250}) capable of achieving remarkable results at the cost of computational complexity and computing times. The generated data structure is usually tabular or sparse, but may vary greatly between different experiments and collaborations. On the other hand, research in the field of computer vision has fueled development of remarkable deep learning models, focused mainly on image generation. \emph{Generative Adversarial Networks} (GANs) \cite{goodfellow2014generative}, \emph{Variational Autoencorders} (VAEs) \cite{kingma2014autoencoding} and \emph{Normalizing Flows} \cite{rezende2016variational} are some of the most successful frameworks developed to this date. However, such tools remain geared towards the necessities of industry; much work remains to be done to enable the use of this technologies in real, hard sciences applications.
+	The main aim of this work is thus to develop a fast and reliable event generation framework based on deep learning. The key idea is to directly generate a high level analysis format, such as CMS NANOAOD \cite{2019EPJWC.21406021R}, training on fully simulated events. As a benchmark to evaluate the performance of such a simulation, the search data for the decay of Higgs to muon pairs in the VBF channel has been chosen. This kind of analysis requires only a limited number of muons and jets features to be simulated while still depending upon proper handling of correlations, so it is a good benchmark for a first prototype of this deep learning based approach. The goal of this kind of simulation, that we call \emph{flashsim}, is to generate the full detector response (simulation and reconstruction) in a negligible time compared to a full simulation, hence enabling the generation of future large datasets at low computing cost, e.g. to study systematic uncertainties in LHC Run3 or to generate HL-LHC samples. 
 	
 	\section*{Thesis work and personal contribution}
 	
-	The main aim of our current work is to enable fast and reliable  deep learning event generation for the study of the process H $\xrightarrow{} \mu^+ \mu^-$ at the CMS experiment. Specifically, we aim to reproduce (i.e. learn from) the NANOAOD event data \cite{2019EPJWC.21406021R} by avoiding the full simulation of the sample and instead producing it in a fraction of the time and computing power, a process we call \emph{flash sim}.
-	
-	Both GANs and VAEs have been extensively investigated by the collaboration at CERN (see \cite{2019glhc} and \cite{otten2021event}); despite this, there is a limited literature regarding behavior in low dimensionality as in our case, e.g. \cite{523096}. We initially focused on GANs, through the use of state of the art libraries such as Tensorflow \cite{tensorflow2015-whitepaper} and Pytorch \cite{NEURIPS2019_9015}. Despite some convincing results in published works, this approaches remain plagued by problems such as \emph{mode collapse}, where the generator over-optimizes for a particular discriminator, and the discriminator never manages to learn its way out of the trap. As a result the generators rotate through a small set of output types, degrading the statistical significance of generated samples. Another common occurrence is failure to converge, due to the peculiar minmax nature of the training.
-	We investigated possible remedies and architectures, such as \emph{Wasserstein Loss}, which implements a loss metric from the \emph{earth mover distance} between the real and generated distributions (see \cite{arjovsky2017wasserstein}), or \emph{Unrolled GAN}s, which use a generator loss function that incorporates not only the current discriminator's classifications, but also the outputs of future discriminator versions (see \cite{metz2017unrolled}). We also implemented a custom \emph{Bitted GAN}, trained on binarized data aiming to directly predict the bin in the histogram output distributions.
+	Both GANs and VAEs have already been extensively investigated by the collaboration at CERN (see \cite{2019glhc} and \cite{otten2021event}); despite this, there is still a limited literature regarding behavior in low dimensionality as in our case, e.g. \cite{523096}. We initially focused on GANs, through the use of state of the art libraries such as Tensorflow \cite{tensorflow2015-whitepaper} and Pytorch \cite{NEURIPS2019_9015}. Despite some convincing results in published works, this approaches remain plagued by problems such as \emph{mode collapse}, where the generator over-optimizes for a particular discriminator, and the discriminator never manages to learn its way out of the trap. As a result the generators rotate through a small set of output types, degrading the statistical significance of generated samples. Another common occurrence is failure to converge, due to the peculiar min-max nature of the training.
+	We investigated possible remedies and architectures, such as \emph{Wasserstein GAN}, which implements a loss metric derived from the \emph{earth mover distance} between the real and generated distributions (see \cite{arjovsky2017wasserstein}), or \emph{Unrolled GAN}s, which use a generator loss function that incorporates not only the current discriminator's classifications, but also the outputs of future discriminator versions (see \cite{metz2017unrolled}). We also implemented a custom \emph{Bitted GAN}, trained on binarized data aiming to directly predict the bin in the histogram output distributions.
 	We obtained no meaningful results, and simple tests performed for VAEs yielded similar outcomes.
 	
 	We thus turned to the approach of Normalizing Flows, a family of methods for constructing flexible learnable probability distributions, often with neural networks, which allow us to surpass the limitations of simple parametric forms to represent complex high-dimensional distributions. In this case, a simple multivariate source of noise, for example a standard i.i.d. normal distribution, $X\sim\mathcal{N}(\mathbf{0},I_{D\times D})$, is passed through a vector-valued invertible bijection, $g:\mathbb{R}^D\rightarrow\mathbb{R}^D$, to produce the more complex transformed variable $Y=g(X)$.
@@ -87,13 +86,13 @@ We can compose such bijective transformations to produce even more complex distr
 	\end{aligned}
 \end{equation*}
 
-where we've defined $y_{(0)}=x$, $y_{(L-1)}=y$ for convenience of notation. Remembering that such transformations depend on a set of learnable parameters, the previous equation naturally lends itself to being interpreted as the \emph{loss function} for our problem.
+Remembering that such transformations depend on a set of learnable parameters, the previous equation naturally lends itself to being interpreted as the \emph{loss function} for our problem.
 
 The main challenge is in designing parametrizable multivariate bijections that have closed form expressions for both $g$ and $g^{-1}$, a tractable Jacobian whose calculation scales with $O(D)$ rather than $O(D^3)$, and can express a flexible class of functions. Recent advancements have demonstrated the suitability of \emph{spline transforms} (see \cite{durkan}).
 
 The theory of Normalizing Flows is also easily generalized to conditional distributions. We denote the variable to condition on by $C=\mathbf{c}\in\mathbb{R}^M$. A simple multivariate source of noise, for example a standard i.i.d. normal distribution, $X\sim\mathcal{N}(\mathbf{0},I_{D\times D})$, is passed through a vector-valued bijection that also conditions on C, $g:\mathbb{R}^D\times\mathbb{R}^M\rightarrow\mathbb{R}^D$, to produce the more complex transformed variable $Y=g(X;C=\mathbf{c})$. In practice, this is usually accomplished by making the parameters for a known normalizing flow bijection $g$ the output of a hypernet neural network that inputs $\mathbf{c}$. It is thus straightforward to condition event generation on the ground truth employed for the Monte Carlo target generation.
 
-Following \cite{green2020complete}, we built a  neural spline normalizing flow composed of 15 transformations layers and successfully learned to reproduce 15 variables for Jets from a NANOAOD sample of 1e6 events. Both the 1-d Wasserstein distance from real sample distributions and pair correlations prove the goodness of the current approach, which manages to obtain convincing samples in a fraction of the time of the full reconstruction.
+Following \cite{green2020complete}, we built a  neural spline normalizing flow composed of 15 transformations layers and successfully learned to reproduce 15 key variables for Jets from a NANOAOD sample of 5e6 events. Both the 1-d Wasserstein distance from real sample distributions and pair correlations prove the goodness of the current approach, which manages to obtain convincing samples in a fraction of the time compared to the full reconstruction.
 
 Future work will see us working toward realistic simulation of all the target variables for the  H $\xrightarrow{} \mu^+ \mu^-$ events, as well as looking into possible extension into \emph{Quantum Machine Learning} (as in \cite{chang2021quantum}).
 
