--- a/texs/research_project/bibliography.bib
+++ b/texs/research_project/bibliography.bib
@@ -7,6 +7,47 @@
 	primaryClass={astro-ph.IM}
 }
 
+@misc{simonyan2015deep,
+	title={Very Deep Convolutional Networks for Large-Scale Image Recognition}, 
+	author={Karen Simonyan and Andrew Zisserman},
+	year={2015},
+	eprint={1409.1556},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV}
+}
+
+@misc{battaglia2018relational,
+	title={Relational inductive biases, deep learning, and graph networks}, 
+	author={Peter W. Battaglia and Jessica B. Hamrick and Victor Bapst and Alvaro Sanchez-Gonzalez and Vinicius Zambaldi and Mateusz Malinowski and Andrea Tacchetti and David Raposo and Adam Santoro and Ryan Faulkner and Caglar Gulcehre and Francis Song and Andrew Ballard and Justin Gilmer and George Dahl and Ashish Vaswani and Kelsey Allen and Charles Nash and Victoria Langston and Chris Dyer and Nicolas Heess and Daan Wierstra and Pushmeet Kohli and Matt Botvinick and Oriol Vinyals and Yujia Li and Razvan Pascanu},
+	year={2018},
+	eprint={1806.01261},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@article{trg2018,
+	title={Fast inference of deep neural networks in FPGAs for particle physics},
+	volume={13},
+	ISSN={1748-0221},
+	url={http://dx.doi.org/10.1088/1748-0221/13/07/P07027},
+	DOI={10.1088/1748-0221/13/07/p07027},
+	number={07},
+	journal={Journal of Instrumentation},
+	publisher={IOP Publishing},
+	author={Duarte, J. and Han, S. and Harris, P. and Jindariani, S. and Kreinar, E. and Kreis, B. and Ngadiuba, J. and Pierini, M. and Rivera, R. and Tran, N. and Wu, Z.},
+	year={2018},
+	month={Jul},
+	pages={P07027–P07027} }
+
+@misc{chan2021quantum,
+	title={Quantum Generative Adversarial Networks in a Continuous-Variable Architecture to Simulate High Energy Physics Detectors}, 
+	author={Su Yeon Chang and Sofia Vallecorsa and Elías F. Combarro and Federico Carminati},
+	year={2021},
+	eprint={2101.11132},
+	archivePrefix={arXiv},
+	primaryClass={quant-ph}
+}
+
 
 @INPROCEEDINGS{2019EPJWC.21406021R,
 	author = {{Rizzi}, Andrea and {Petrucciani}, Giovanni and {Peruzzi}, Marco},
